# personal-journal

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  journal.json  pyproject.toml  requirements.txt  users.json
.github/workflows/: ci.yml
config/: settings.py  urls.py
journal/: admin.py  forms.py  models.py  paginations.py  serializers.py  services.py  tests.py  urls.py  views.py
journal/migrations/: 0001_initial.py  0002_initial.py  0003_alter_diaryentry_options.py  0004_alter_diaryentry_owner.py  0005_alter_diaryentry_content_alter_diaryentry_owner_and_more.py
journal/templates/journal/: base.html  diaryentry_confirm_delete.html  diaryentry_detail.html  diaryentry_form.html  diaryentry_list.html  index.html
journal/templates/journal/includes/: main_menu.html
users/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_chat_id.py  0003_remove_user_phone_user_phone_number_user_token.py  0004_alter_user_options.py
users/templates/registration/: login.html  logout.html
users/templates/users/: email_confirmation.html  password_recovery.html  reset_password.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
